--- a/style.css
+++ b/style.css
@@ -350,16 +350,16 @@ nav a:hover {
 #patriksehnoutekContent {
   position: relative;
   width: 100%;
-  padding-top: 20%;
-  padding-bottom: 20%;
+  
   height: 100%;
   display: flex;
   justify-content: space-evenly;
 }
 
 #patriksehnoutekNavigation {
+  display: initial;
   position: absolute;
-  top: -16vh;
+  top: 20vh;
 }
 
 #patrikRight {
@@ -422,6 +422,7 @@ nav a:hover {
 /*Marcel Feiler*/
 #marcelfeiler {
   overflow: hidden;
+  background-color: #0c0c0c;
   position: relative;
   width: 100%;
   height: 120vh;
@@ -638,7 +639,7 @@ footer {
   }
 
   #patriksehnoutekNavigation {
-    top: 0;
+    top: 20vh;
   }
 
   #lukaschytilNavigation {
@@ -746,7 +747,7 @@ footer {
   }
 
   #patriksehnoutekNavigation {
-    top: 0;
+    top: 20vh;
   }
 
   #lukaschytilNavigation {
@@ -904,7 +905,7 @@ footer {
   }
 
   #patriksehnoutekNavigation {
-    top: 3vh;
+    top: 20vh;
   }
 
   #marcelNavigation {
@@ -989,6 +990,12 @@ footer {
     #patriksehnoutek{
         height: 100vh;
     }
+    #patrikRight{
+        height: 50%;
+    }
+    #patrikLeft{
+        height: 40%;
+    }
 
     #marcelfeiler, #lukaschytil{
         height: 100vh;
@@ -997,6 +1004,8 @@ footer {
     #marcelNavigation, #lukaschytilNavigation {
         top: 10vh;
       }
-    
+      #patriksehnoutekNavigation {
+        top: 0vh;
+      }
   }
 }
